# openhh

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Hedgehog/Base/: Assert.ixx  Filesystem.ixx
src/Hedgehog/Core/: Application.ixx  IRenderer.ixx  RendererBgfx.ixx  Window.ixx
